Make git init default branch name be 'main'

--- a/.gitconfig
+++ b/.gitconfig
@@ -39,8 +39,13 @@
 	renames = copies
 
 [include]
-  # Include private git config, like user name and email
-  path = ~/.gitconfig_local
+
+	# Include private git config, like user name and email
+	path = ~/.gitconfig_local
+
+[init]
+
+	defaultBranch = main
 
 [pull]
 
